packages/pug-lexer/test/errors/open-interpolation.pug
p #[strong this is some terrible brackets mismatching